#940: windows scrollbars fix

--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -33,7 +33,7 @@ input, textarea, select { font-family: 'Inter'; }
 }
 #root > .loaderWrapper { position: fixed; width: 100%; height: 100%; left: 0px; top: 0px; }
 
-body.platformWindows {
+html.platformWindows {
 	#drag { height: 30px; background: $colorBlack; z-index: 1000; }
 	#drag {
 		.sides { display: flex; height: 100%; line-height: 30px; }
@@ -74,6 +74,21 @@ body.platformWindows {
 			.innerWrap { top: 68px; }
 		}
 	}
+
+	::-webkit-scrollbar { width: 12px; }
+	::-webkit-scrollbar-thumb { 
+		width: 6px; 
+		max-height: calc(100% - 10px);
+		background: rgba(0,0,0,0.35); 
+		border: 3px solid rgba(0, 0, 0, 0); 
+		border-radius: 6px; 
+		background-clip: padding-box; 
+	}
+	::-webkit-scrollbar-track {
+		background-color: transparent;
+	}
+	::-webkit-scrollbar-corner { background-color: transparent; }
+	::-webkit-scrollbar-button { display: none; }
 }
 
 .dn { display: none !important; }
