--- a/src/scss/component/header.scss
+++ b/src/scss/component/header.scss
@@ -136,7 +136,7 @@
 	}
 }
 
-body.platformMac {
+html.platformMac {
 	.header {
 		.side.left { left: 90px; }
 	}
