--- a/src/scss/menu/block/common.scss
+++ b/src/scss/menu/block/common.scss
@@ -43,7 +43,7 @@
 	}
 }
 
-body.platformWindows, body.platformLinux {
+html.platformWindows, body.platformLinux {
 	.menus {
 		.menu.menuBlockAdd { width: 377px !important; }
 	}
