--- a/src/scss/menu/smile.scss
+++ b/src/scss/menu/smile.scss
@@ -50,7 +50,7 @@
 	}
 }
 
-body.platformWindows, body.platformLinux {
+html.platformWindows, html.platformLinux {
 	.menus {
 		.menu.menuSmile { width: 401px; }
 	}
