--- a/src/scss/popup/editor/page.scss
+++ b/src/scss/popup/editor/page.scss
@@ -4,7 +4,7 @@
 	.popup.popupEditorPage {
 		.innerWrap { width: 960px; height: calc(100% - 128px); padding: 0px; }
 
-		.header { position: absolute; padding: 0px; border-radius: 12px 12px 0px 0px; }
+		.header { position: absolute; padding: 0px; border-radius: 12px 12px 0px 0px; top: 0px !important; }
 		.header {
 			.menu { right: 0px; top: 0px; }
 		}
